# volrend

./: .ccls  .gitignore  .gitmodules  CMakeLists.txt  LICENSE.md  README.md  common.hpp.in  main.cpp  main_anim.cpp  main_headless.cpp
cmake/: concat.cmake  shader_inl.cmake
include/volrend/: camera.hpp  data_format.hpp  mesh.hpp  n3tree.hpp  render_options.hpp  renderer.hpp
include/volrend/cuda/: common.cuh  data_spec.cuh  lumisphere.cuh  n3tree_query.cuh  renderer_kernel.hpp  rt_core.cuh  rt_naive.cuh
include/volrend/internal/: auto_filesystem.hpp  data_spec.hpp  glutil.hpp  imwrite.hpp  lumisphere.hpp  morton.hpp  n3tree_query.hpp  opts.hpp  shader.hpp
sample_obj/: legoman.obj.offs
sample_obj/sh/: README  gen_sh.cpp  sh_0_p0.obj.offs  sh_1_n1.obj.offs  sh_1_p0.obj.offs  sh_1_p1.obj.offs  sh_2_n1.obj.offs  sh_2_n2.obj.offs  sh_2_p1.obj.offs  sh_2_p2.obj.offs  sh_3_n1.obj.offs  sh_3_n2.obj.offs  sh_3_n3.obj.offs  sh_3_p0.obj.offs  sh_3_p1.obj.offs  sh_3_p2.obj.offs  sh_3_p3.obj.offs  sh_4_n1.obj.offs  sh_4_n2.obj.offs  sh_4_n3.obj.offs  sh_4_n4.obj.offs  sh_4_p0.obj.offs  sh_4_p1.obj.offs  sh_4_p2.obj.offs  sh_4_p3.obj.offs  sh_4_p4.obj.offs
scripts/: compress_octree.py  extract_cams_drawlist.py  extract_test_poses.py  vol2plenoctree.py
shaders/: basic_mesh.glsl  fxaa.glsl  plenoctree.glsl  render.comp  rt.frag
src/: camera.cpp  cs_renderer.cpp  cuda_renderer.cpp  glutil.cpp  imwrite.cpp  mesh.cpp  n3tree.cpp  opts.cpp  renderer.cpp  shader_renderer.cpp
src/cmake/: volrendConfig.cmake
src/cuda/: common.cu  n3tree.cu  volrend.cu
web/: autoversion.py  index.html  inline.py  main_web.cpp
web/css/: main.css
web/js/: emModule.js  glfwPatch.js  guiComponents.js  init.js  util.js
